--- a/browser/package.json
+++ b/browser/package.json
@@ -13,6 +13,7 @@
         "@mixer/webpack-bundle-compare": "^0.1.1",
         "assert": "^2.0.0",
         "babel-loader": "^9.1.2",
+        "buffer": "^6.0.3",
         "karma": "^6.4.1",
         "karma-chrome-launcher": "^3.1.1",
         "karma-mocha": "^2.0.1",
